--- a/CarvedRock.Admin/Views/Shared/_Layout.cshtml
+++ b/CarvedRock.Admin/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home"
                                 asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductsDb"
+                               asp-action="Index">Products from DB</a>
                     </ul>
                 </div>
             </div>
