Update the Controller

--- a/CarvedRock.Admin/Views/Products/Index.cshtml
+++ b/CarvedRock.Admin/Views/Products/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h1>Products</h1>
-
+<p>
+    <a asp-action="Create" class="btn btn-success">Create New</a>
+</p>
 <table class="table table-responsive">
     <thead>
         <tr>
