Adding a Bootstrap Theme - BootsWatch - Litera

--- a/CarvedRock.Admin/Views/Home/Index.cshtml
+++ b/CarvedRock.Admin/Views/Home/Index.cshtml
@@ -4,5 +4,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    <div class="alert alert-info" role="alert">
+        This is where you can administer the products available on the Carved Rock website!
+    </div>
     <p>Learn more <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
