--- a/CarvedRock.Admin/Views/Products/Edit.cshtml
+++ b/CarvedRock.Admin/Views/Products/Edit.cshtml
@@ -44,8 +44,6 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+@section scripts {
+    <partial name="_ValidationScriptsPartial"></partial>
 }
