--- a/CarvedRock.Admin/Views/Products/Index.cshtml
+++ b/CarvedRock.Admin/Views/Products/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Products</h1>
 <p>
-    <a asp-action="Create" class="btn btn-success">Create New</a>
+    <a class="btn btn-info" role="button" asp-action="Create">Create New</a>
 </p>
 <table class="table table-responsive">
     <thead>
