--- a/CarvedRock.Admin/Views/Products/Details.cshtml
+++ b/CarvedRock.Admin/Views/Products/Details.cshtml
@@ -23,6 +23,13 @@
         </dd>
 
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(m => m.CategoryName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(m => m.CategoryName)
+        </dd>
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(m => m.Description)
         </dt>
         <dd class=col-sm-10>
